--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,9 @@
   "firestore": {
     "rules": "messageai/firestore.rules",
     "indexes": "messageai/firestore.indexes.json"
+  },
+  "storage": {
+    "rules": "messageai/storage.rules"
   }
 }
 
