--- a/messageai/package.json
+++ b/messageai/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@tanstack/react-query": "^5.90.5",
     "babel-preset-expo": "^54.0.5",
     "expo": "~54.0.14",
     "expo-constants": "~18.0.9",
+    "expo-image-manipulator": "^14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "^0.32.12",
     "expo-router": "~6.0.13",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
