feat: Phase 2A complete - AI Foundation with Cloud Functions
- Added Firebase Cloud Functions setup
- Implemented OpenAI API integration
- Built AI Assistant chat interface
- Added thread summarization with encryption toggle
- Implemented per-message encryption control
- Added participant avatars to summaries
- Enhanced UX with typing indicators
- Moved media buttons to header

Phase 2.1, 2.2, and 2.3 complete

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,21 @@
   },
   "storage": {
     "rules": "messageai/storage.rules"
-  }
+  },
+  "functions": [
+    {
+      "source": "messageai/functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
 }
 
