--- a/messageai/package.json
+++ b/messageai/package.json
@@ -12,19 +12,26 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@tanstack/react-query": "^5.90.5",
+    "@types/crypto-js": "^4.2.2",
     "babel-preset-expo": "^54.0.5",
+    "crypto-js": "^4.2.0",
     "expo": "~54.0.14",
+    "expo-av": "^16.0.7",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
+    "expo-document-picker": "~14.0.7",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-notifications": "^0.32.12",
+    "expo-random": "^14.0.1",
     "expo-router": "~6.0.13",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
