--- a/messageai/functions/package.json
+++ b/messageai/functions/package.json
@@ -16,6 +16,7 @@
     "node": "18"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.2",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.0.0",
     "openai": "^4.20.0"
@@ -26,5 +27,3 @@
   },
   "private": true
 }
-
-
