Phase 3.3: RAG Testing (5/8 passed) + Bug Fix (BUG-009 Encryption Display)
 RAG Testing Progress:
- TEST 1: Pinecone Connection - PASSED
- TEST 2: Automatic Message Indexing - PASSED
- TEST 3: Migrate Existing Messages - PASSED
- TEST 4: Semantic Search (Synonyms) - PASSED
- TEST 5: Semantic Search (Concepts) - PASSED
- TEST 6-8: Pending (Privacy, Fallback, Performance)

 Bug Fix - BUG-009: Encrypted Message Display
- Problem: Encrypted messages showed raw encrypted text in conversation list
- Root Cause: Firestore rejects undefined values in lastMessage.encryptedText
- Solution: Conditionally add encryptedText only when message is encrypted
- Files Modified:
  * src/types/models.ts - Added encrypted & encryptedText to ConversationSummary.lastMessage
  * src/components/conversations/ConversationCard.tsx - Added decryption logic with  icon
  * src/services/firebase/firestore.ts - Fixed undefined value issue in lastMessage updates
- Result: Encrypted messages now show as ' Decrypted message text'

 Documentation Updates:
- TaskList v2.3  v2.4 (5/8 RAG tests passed, bug fix added)
- README v1.1  v1.2 (testing progress, bug fix documented)
- Added testing session notes (TESTING-SESSION-Phase-3.3-RAG.md)
- Added status updates (END-OF-DAY4-STATUS.md, PHASE-3.3-IMPLEMENTATION-COMPLETE.md)

 Other Changes:
- Updated Expo configuration (app.json)
- Removed .env.example files (security cleanup)
- Updated dependencies (package.json, package-lock.json)

Stats: 4 bugs fixed | 5/8 RAG tests passed | All 5 AI features complete

--- a/messageai/app.json
+++ b/messageai/app.json
@@ -28,6 +28,11 @@
     "scheme": "messageai",
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "updates": {
+      "enabled": false,
+      "checkAutomatically": "NEVER",
+      "fallbackToCacheTimeout": 0
+    }
   }
 }
