--- a/messageai/package.json
+++ b/messageai/package.json
@@ -15,7 +15,7 @@
     "@types/crypto-js": "^4.2.2",
     "babel-preset-expo": "^54.0.5",
     "crypto-js": "^4.2.0",
-    "expo": "~54.0.14",
+    "expo": "^54.0.20",
     "expo-av": "^16.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
