--- a/messageai/package.json
+++ b/messageai/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@giphy/js-fetch-api": "^5.7.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@tanstack/react-query": "^5.90.5",
